--- a/package.json
+++ b/package.json
@@ -1,50 +1,56 @@
 {
-  "name": "25-omdb",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
-    "axios": "^0.21.1",
-    "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "sequelize": "^6.5.0"
-  },
-  "scripts": {
-    "start": "concurrently 'npm run server' 'npm run client'",
-    "server": "nodemon api/server.js",
-    "client": "react-scripts start",
-    "build": "react-scripts build",
-    "seed": "node api/db/seed"
-  },
-  "proxy": "http://localhost:3001",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "concurrently": "^6.0.0",
-    "nodemon": "^2.0.7"
-  }
+    "name": "25-omdb",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@craco/craco": "^6.1.2",
+        "@reduxjs/toolkit": "^1.5.0",
+        "axios": "^0.21.1",
+        "express": "^4.17.1",
+        "pg": "^8.5.1",
+        "pg-hstore": "^2.3.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "redux": "^4.0.5",
+        "redux-logger": "^3.0.6",
+        "sequelize": "^6.5.0"
+    },
+    "scripts": {
+        "start": "concurrently 'npm run server' 'npm run client' 'craco start'",
+        "server": "nodemon api/server.js",
+        "client": "react-scripts start",
+        "build": "craco build",
+        "test": "craco test",
+        "seed": "node api/db/seed"
+    },
+    "proxy": "http://localhost:3001",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^9.8.6",
+        "concurrently": "^6.0.0",
+        "nodemon": "^2.0.7",
+        "postcss": "^7.0.36",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+    }
 }
