--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
         "sequelize": "^6.5.0"
     },
     "scripts": {
-        "start": "concurrently 'npm run server' 'npm run client' 'craco start'",
+        "start": "concurrently 'npm run server' 'npm run client'",
         "server": "nodemon api/server.js",
         "client": "react-scripts start",
-        "build": "craco build",
-        "test": "craco test",
+        "build": "react script build",
+        "test": "react script test",
         "seed": "node api/db/seed"
     },
     "proxy": "http://localhost:3001",
