--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "dependencies": {
         "@craco/craco": "^6.1.2",
         "@reduxjs/toolkit": "^1.5.0",
+        "antd": "^4.16.3",
         "axios": "^0.21.1",
         "express": "^4.17.1",
         "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-icons": "^4.2.0",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-spring": "^9.2.3",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "sequelize": "^6.5.0"
