--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "@reduxjs/toolkit": "^1.5.0",
         "antd": "^4.16.3",
         "axios": "^0.21.1",
+        "body-parser": "^1.19.0",
+        "chalk": "^4.1.1",
         "express": "^4.17.1",
+        "http": "0.0.1-security",
         "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
         "react": "^17.0.1",
@@ -20,7 +23,8 @@
         "react-spring": "^9.2.3",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
-        "sequelize": "^6.5.0"
+        "sequelize": "^6.5.0",
+        "volleyball": "^1.5.1"
     },
     "scripts": {
         "start": "concurrently 'npm run server' 'npm run client'",
