--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
         "@reduxjs/toolkit": "^1.5.0",
         "antd": "^4.16.3",
         "axios": "^0.21.1",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "chalk": "^4.1.1",
+        "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
+        "express-session": "^1.17.2",
         "http": "0.0.1-security",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
         "react": "^17.0.1",
