--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "body-parser": "^1.19.0",
         "chalk": "^4.1.1",
         "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "http": "0.0.1-security",
