--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
+        "bootstrap": "^5.0.2",
         "chalk": "^4.1.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
