--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-session": "^1.17.2",
         "http": "0.0.1-security",
         "passport": "^0.4.1",
+        "passport-facebook": "^3.0.0",
         "passport-local": "^1.0.0",
         "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
